# opentools

./: .gitignore  .pre-commit-config.yaml  Dockerfile.mcp  README.md  docker-compose.mcp.yml  pyproject.toml  requirements-mcp.txt  requirements.txt  requirements_window.txt  set_up_package.sh  set_up_package_window.sh
.github/workflows/: tool-evaluation.yml
docs/: 1_TOOL_RUNNING.md  2_AGENT_RUNNING.md  3_CONTRIBUTION.md
docs/demo/: 1_tool_running.ipynb  2_agent_running.ipynb  3_agent_running_with_tool_retrieval.ipynb  4_evaluation_mcp_contribution.ipynb  5_dspy_agent_optimization.ipynb
opentools_contributions/my_tool_1ea59ccc/: README.md  __init__.py  contribution.json  original_tool.py  tool.py
src/opentools/: README.md  __init__.py  cli.py  conversion.py  evaluation.py  external_scanners.py  inventory.py  mcp_server.py  schema_validation.py  solver.py  webui.py
src/opentools/Benchmark/: README.md  run_all.sh  solve.py  utils.py
src/opentools/Benchmark/algopuzzlevqa/: calculate_score.py  data.json  octotools_gpt4_octotools_toolset.sh  octotools_gpt4_opentools_toolset.sh  octotools_gpt5_octotools_toolset.sh  octotools_gpt5_opentools_toolset.sh  react_gpt4_octotools_toolset.sh  react_gpt4_opentools_toolset.sh  react_gpt5_octotools_toolset.sh  react_gpt5_opentools_toolset.sh  run_cot.sh  run_opentools.sh  run_zs.sh
src/opentools/Benchmark/clevr-math/: calculate_score.py  octotools_gpt4_octotools_toolset.sh  octotools_gpt4_opentools_toolset.sh  octotools_gpt5_octotools_toolset.sh  octotools_gpt5_opentools_toolset.sh  react_gpt4_octotools_toolset.sh  react_gpt4_opentools_toolset.sh  react_gpt5_octotools_toolset.sh  react_gpt5_opentools_toolset.sh  run_cot.sh  run_opentools.sh  run_zs.sh
src/opentools/Benchmark/gaia-text/: calculate_score.py  octotools_gpt4_octotools_toolset.sh  octotools_gpt4_opentools_toolset.sh  octotools_gpt5_octotools_toolset.sh  octotools_gpt5_opentools_toolset.sh  react_gpt4_octotools_toolset.sh  react_gpt4_opentools_toolset.sh  react_gpt5_octotools_toolset.sh  react_gpt5_opentools_toolset.sh  run_cot.sh  run_zs.sh
src/opentools/Benchmark/gameof24/: calculate_score.py  octotools_gpt4_octotools_toolset.sh  octotools_gpt4_opentools_toolset.sh  octotools_gpt5_octotools_toolset.sh  octotools_gpt5_opentools_toolset.sh  react_gpt4_octotools_toolset.sh  react_gpt4_opentools_toolset.sh  react_gpt5_octotools_toolset.sh  react_gpt5_opentools_toolset.sh  run_cot.sh  run_opentools.sh  run_zs.sh
src/opentools/agents/: README.md  __init__.py  agent_manager.py  base_agent.py  tool_based_agent.py
src/opentools/core/: README.md  __init__.py  base.py  config.py  display.py  factory.py  gemini.py  openai.py  registry.py  tool_retrieval.py
src/opentools/integrations/: __init__.py  dspy.py  dspy_agent.py
src/opentools/models/: README.md  executor.py  formatters.py  initializer.py  memory.py
src/opentools/security/: semgrep.yml
src/opentools/tools/: __init__.py  evaluation_index.json  readme.md
src/opentools/utils/: __init__.py  logging.py  validation.py
tests/: test_conversion.py  test_dspy_integration.py  test_evaluation.py  test_external_scanners.py  test_inventory.py  test_mcp_server.py
(+355 files in other folders)
